solved image not fiting correctly in cells

--- a/webapp/src/main/webapp/static/css/userHomeView.css
+++ b/webapp/src/main/webapp/static/css/userHomeView.css
@@ -151,3 +151,8 @@ button {
     height: 100%;
 }
 
+.responsive-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
